docker-compose/envoy/envoy-gateway/config_1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
  - name: https
    port: 8443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: gateway-cert
        kind: Secret
        namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: eg
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-backend
          port: 8090
          weight: 1
---
apiVersion: v1
kind: Service
metadata:
  name: test-backend
  namespace: envoy-gateway-system
spec:
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
  selector:
    app: test-backend
